  payloads are now ordered by integer value rather than lexicographically.

- Issue #6163: Fixed HP-UX runtime library dir options in
  distutils.unixcompiler. Initial patch by Sridhar Ratnakumar and
  Michael Haubenwallner.

Extension Modules
-----------------

- Issue #7078: Set struct.__doc__ from _struct.__doc__.

- Issue #6848: Fix curses module build failure on OS X 10.6.

Tests
-----

- Issue #7295: Do not use a hardcoded file name in test_tarfile.

- Issue #7270: Add some dedicated unit tests for multi-thread synchronization
  primitives such as Lock, RLock, Condition, Event and Semaphore.

- Issue #7248 (part 2): Use a unique temporary directory for importlib source
  tests instead of tempfile.tempdir. This prevents the tests from sharing state
  between concurrent executions on the same system.

- Issue #7248: In importlib.test.source.util a try/finally block did not make
  sure that some referenced objects actually were created in the block before
  calling methods on the object.

- Issue #7055: test___all__ now greedily detects all modules which have an
  __all__ attribute, rather than using a hardcoded and incomplete list.

- Issue #7058: Added save/restore for argv and os.environ to runtest_inner
  in regrtest, with warnings if the called test modifies them.

- Issue #7042: Fix test_signal (test_itimer_virtual) failure on OS X 10.6.

Build
-----

- Issue #6603: Change READ_TIMESTAMP macro in ceval.c so that it
  compiles correctly under gcc on x86-64.  This fixes a reported
  problem with the --with-tsc build on x86-64.

- Issue #6802: Fix build issues on MacOSX 10.6

- Issue #6801 : symmetric_difference_update also accepts |.
  Thanks to Carl Chenet. 

Documentation
-------------

- Issue #6556: Fixed the Distutils configuration files location explanation
  for Windows.


What's New in Python 3.1.1?
===========================

*Release date: 2009-08-13*

Core and Builtins
-----------------
